--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,10 @@
 [project]
-name = "smail"
+name = "smail-cli"
 version = "0.1.0"
 requires-python = ">=3.12"
 dependencies = [
     "rich>=13.0.0",
 ]
+
+[project.scripts]
+smail = "smail:main"
